--- a/TimelapseBlobCopyFunction/TimelapseBlobCopyFunction.csproj
+++ b/TimelapseBlobCopyFunction/TimelapseBlobCopyFunction.csproj
@@ -4,8 +4,11 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.6" />
-    <PackageReference Include="WindowsAzure.Storage" Version="8.6.0" />
+    <Compile Remove="CopyBlobFunction.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.Storage.DataMovement" Version="0.7.1" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.13" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
